# 32F769IDISCOVERY

./: CMakeLists.txt
cmake/: project.cmake
cmake/build_common/: compiler.cmake  linker.cmake
cmake/cpu/: stm32f769.cmake
cmake/stm32cubemx/: CMakeLists.txt
cmake/toolchain/: gcc-arm-none-eabi.cmake
components/drivers/: CMakeLists.txt  stm32f7xx_hal_conf.h
components/gui/lvgl-9.1.0/: lv_conf.h
components/heap/: CMakeLists.txt  heap.c  heap.h
components/heap/port/: target.h
components/heap/tlsf/src/: tlsf.c
components/ll_init/: CMakeLists.txt  clock.c  ll_init.c  ll_init.h  qspi.c  sdram.c  stm32f769i_discovery_lcd.c  stm32f769i_discovery_lcd.h  stm32f769i_discovery_qspi.h  stm32f769i_discovery_ts.c  stm32f769i_discovery_ts.h
components/ll_init/ft6x06/: ft6x06.c  ft6x06.h  ts.h
components/log/: CMakeLists.txt
components/main/: CMakeLists.txt  jlink.jlink  main.c  ozone.jdebug
components/os/: CMakeLists.txt
components/os/port/: FreeRTOSConfig.h  heap_tlsf.c  stack_overflow.c
components/startup/: CMakeLists.txt  STM32F769NIHX_FLASH.ld  startup_stm32f769xx.s
components/syscalls/: CMakeLists.txt  ll_init.c  syscalls.c  syscalls.h
